Cleanup SDG Maven parent and spring-data-geode module POM files.
Move all build plugin configuraton to the parent.

Remove the 'ci' and 'distribute' build profile specific 'maven-javadoc-plugin' configuration.

Resolves gh-538.