@@ -56,6 +56,7 @@
 
 	<build>
 		<plugins>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
@@ -64,59 +65,33 @@
 						<dependencySourceExclude>org.apache.geode:geode-gfsh</dependencySourceExclude>
 					</dependencySourceExcludes>
 					<failOnWarnings>false</failOnWarnings>
-					<links>
+					<links combine.children="append">
 						<link>https://geode.apache.org/releases/latest/javadoc/</link>
 					</links>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>--add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
+					<includes>
+						<include>**/*Tests.java</include>
+						<include>**/*Test.java</include>
+					</includes>
+					<reuseForks>false</reuseForks>
+					<systemProperties>
+						<java.util.logging.config.file>${basedir}/src/test/resources/java-util-logging.properties</java.util.logging.config.file>
+						<gemfire.disableShutdownHook>true</gemfire.disableShutdownHook>
+						<logback.log.level>error</logback.log.level>
+						<spring.profiles.active>apache-geode</spring.profiles.active>
+					</systemProperties>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
-
-	<profiles>
-
-		<profile>
-			<id>ci</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-javadoc-plugin</artifactId>
-						<configuration>
-							<dependencySourceExcludes>
-								<dependencySourceExclude>org.apache.geode:geode-gfsh</dependencySourceExclude>
-							</dependencySourceExcludes>
-							<failOnWarnings>false</failOnWarnings>
-							<links>
-								<link>https://geode.apache.org/releases/latest/javadoc/</link>
-							</links>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>distribute</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-javadoc-plugin</artifactId>
-						<configuration>
-							<dependencySourceExcludes>
-								<dependencySourceExclude>org.apache.geode:geode-gfsh</dependencySourceExclude>
-							</dependencySourceExcludes>
-							<failOnWarnings>false</failOnWarnings>
-							<links>
-								<link>https://geode.apache.org/releases/latest/javadoc/</link>
-							</links>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-	</profiles>
 
 	<repositories>
 
@@ -137,7 +112,7 @@
 			</releases>
 		</repository>
 
-		<!--
+<!--
 		<repository>
 			<id>apache-snapshots</id>
 			<url>https://repository.apache.org/content/repositories/orgapachegeode-1060</url>
